# llamaindex_RAG

./: .env.example  .gitignore  AGENTS.md  README.md  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
app/: main.py  schemas.py
config/: settings.py
core/: application.py  documentManager.py  events.py  ingestion.py  pdfProcessor.py  pdf_parser.py  workflow.py
langgraph_service/: README.md  db.py  langgraph.json  langgraph_app.py  models.py  pyproject.toml
langgraph_service/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
langgraph_service/config/: settings.py
langgraph_service/my_agent/: agent.py
langgraph_service/my_agent/utils/: __init__.py  nodes.py  state.py  tools.py
langgraph_service/my_agent/writing_subgraph/: __init__.py  graph.py  nodes.py  state.py
main_service/: README.md  models.py  pyproject.toml  run.py
main_service/app/: main.py  schemas.py
main_service/app/routers/: chat.py  documents.py  users.py
main_service/app/services/: __init__.py  auth_service.py  conversation_repository.py  langgraph_service.py  memory_repository.py  rag_api_service.py  user_repository.py
main_service/config/: settings.py
rag_api_service/: README.md  pyproject.toml  rest_api.py  run.py
rag_api_service/config/: settings.py
rag_api_service/core/: application.py  documentManager.py  ingestion.py  pdf_parser.py  workflow.py
rag_api_service/file/storage_bm25/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
(+36 files in other folders)
