[project]
name = "main-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.9",
    "uvicorn==0.34.3",
    "httpx>=0.28.1",
    "langgraph-sdk>=0.1.70",
    "sqlalchemy>=2.0.41",
    "psycopg[binary]>=3.2.9",
    "pydantic==2.11.7",
    "python-multipart==0.0.20",
    "PyJWT==2.10.1",
    "pwdlib==0.3.0",
    "pwdlib[argon2]==0.3.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.9.4",
    "langchain-mcp-adapters>=0.1.0",
]
